# EspritCare

./: CMakeLists.txt  README.md  addpatientwindow.cpp  addpatientwindow.h  addsessionwindow.cpp  addsessionwindow.h  dashboardwindow.cpp  dashboardwindow.h  dsabackend.cpp  dsabackend.h  espritdb.cpp  espritdb.h  main.cpp  mainwindow.cpp  mainwindow.h  viewpatientwindow.cpp  viewpatientwindow.h
